criando o endpoint para compra de nft

--- a/infrastructure/src/main/resources/application.yml
+++ b/infrastructure/src/main/resources/application.yml
@@ -19,6 +19,8 @@ spring:
   main:
     allow-bean-definition-overriding: true
   cloud:
+    compatibility-verifier:
+      enabled: false
     config:
       enabled: false
   output:
